{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 492,
  "lineage": "a0eedba7-e427-8e4c-cd85-bdfe77c9b5fd",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa50db5640a4cdb9",
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:elastic-ip/eipalloc-0fa50db5640a4cdb9",
            "association_id": "eipassoc-042a6f7aaa90d3708",
            "domain": "vpc",
            "id": "eipalloc-0fa50db5640a4cdb9",
            "instance": "i-0a32ad127cfd44641",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0f88c8b29348a3df1",
            "private_dns": "ip-10-0-1-175.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-18-179-238-16.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.238.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wp-shamo-wordpress-eip"
            },
            "tags_all": {
              "Name": "wp-shamo-wordpress-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_instance.wordpress",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.ec2_public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "validation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:instance/i-03d77a4074995781d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d77a4074995781d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp-shamo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06406684a5aeb6911",
            "private_dns": "ip-10-0-10-37.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:827006371271:key/e491502b-f70a-485d-b1e3-0367ec4b7e57",
                "throughput": 0,
                "volume_id": "vol-09d32156b1d0c3a09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06aead6e18fb6953b",
            "tags": {
              "Name": "wp-test-ec2"
            },
            "tags_all": {
              "Name": "wp-test-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0535c54f791156fff"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.ec2_public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:instance/i-0a32ad127cfd44641",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a32ad127cfd44641",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp-shamo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f88c8b29348a3df1",
            "private_dns": "ip-10-0-1-175.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-18-179-238-16.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.238.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:827006371271:key/e491502b-f70a-485d-b1e3-0367ec4b7e57",
                "throughput": 0,
                "volume_id": "vol-017b20cd085a6ef82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b0619834a70cad5",
            "tags": {
              "Name": "wp-shamo-ec2"
            },
            "tags_all": {
              "Name": "wp-shamo-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0535c54f791156fff"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.ec2_public"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e2af43551e519dc",
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:elastic-ip/eipalloc-09e2af43551e519dc",
            "association_id": "eipassoc-00be4b9bf1d88a394",
            "domain": "vpc",
            "id": "eipalloc-09e2af43551e519dc",
            "instance": "i-0c7c609fb26eba791",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-048ec03fcdcb39706",
            "private_dns": "ip-10-0-1-132.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-52-199-80-235.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.80.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wp-shamo-nat-eip"
            },
            "tags_all": {
              "Name": "wp-shamo-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_instance.aws_instance.nat",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.nat_instance"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:instance/i-0c7c609fb26eba791",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7c609fb26eba791",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "wp-shamo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048ec03fcdcb39706",
            "private_dns": "ip-10-0-1-132.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-52-68-220-167.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.68.220.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0939003d06e2d9c9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06b0619834a70cad5",
            "tags": {
              "Name": "wp-shamo-nat-instance"
            },
            "tags_all": {
              "Name": "wp-shamo-nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c03b649b2208c83"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.nat_instance"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:internet-gateway/igw-0dceadad4829211f1",
            "id": "igw-0dceadad4829211f1",
            "owner_id": "827006371271",
            "tags": {
              "Name": "wp-shamo-igw"
            },
            "tags_all": {
              "Name": "wp-shamo-igw"
            },
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:route-table/rtb-0579eac2bb9f3d285",
            "id": "rtb-0579eac2bb9f3d285",
            "owner_id": "827006371271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-048ec03fcdcb39706",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp-shamo-rt-private"
            },
            "tags_all": {
              "Name": "wp-shamo-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_instance.aws_instance.nat",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.nat_instance"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:route-table/rtb-0b203f478c0675ea1",
            "id": "rtb-0b203f478c0675ea1",
            "owner_id": "827006371271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dceadad4829211f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp-shamo-rt-public"
            },
            "tags_all": {
              "Name": "wp-shamo-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c393fafae7c60f6",
            "route_table_id": "rtb-0579eac2bb9f3d285",
            "subnet_id": "subnet-06aead6e18fb6953b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_instance.aws_instance.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_1a",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.nat_instance"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a197b7795cb4b050",
            "route_table_id": "rtb-0b203f478c0675ea1",
            "subnet_id": "subnet-06b0619834a70cad5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:subnet/subnet-06aead6e18fb6953b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aead6e18fb6953b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827006371271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wp-shamo-private-1a"
            },
            "tags_all": {
              "Name": "wp-shamo-private-1a"
            },
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:subnet/subnet-0ced4353390a6ef95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ced4353390a6ef95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827006371271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wp-shamo-private-1c"
            },
            "tags_all": {
              "Name": "wp-shamo-private-1c"
            },
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:subnet/subnet-06b0619834a70cad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b0619834a70cad5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827006371271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wp-shamo-public-1a"
            },
            "tags_all": {
              "Name": "wp-shamo-public-1a"
            },
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:vpc/vpc-0be87d32749c2e208",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07eb4e4a2ad7b1473",
            "default_route_table_id": "rtb-0e98391fa24cd2015",
            "default_security_group_id": "sg-022abe2777e3a9a5b",
            "dhcp_options_id": "dopt-0276d0fddab9a2713",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be87d32749c2e208",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e98391fa24cd2015",
            "owner_id": "827006371271",
            "tags": {
              "Name": "wp-shamo-vpc"
            },
            "tags_all": {
              "Name": "wp-shamo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:security-group/sg-0535c54f791156fff",
            "description": "EC2 public subnet SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0535c54f791156fff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wp-shamo-sg-ec2-public",
            "name_prefix": "",
            "owner_id": "827006371271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp-shamo-sg-ec2-public"
            },
            "tags_all": {
              "Name": "wp-shamo-sg-ec2-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:security-group/sg-03c03b649b2208c83",
            "description": "NAT instance SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c03b649b2208c83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wp-shamo-sg-nat-instance",
            "name_prefix": "",
            "owner_id": "827006371271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp-shamo-sg-nat-instance"
            },
            "tags_all": {
              "Name": "wp-shamo-sg-nat-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827006371271:security-group/sg-0fe26d73bd17f44b2",
            "description": "RDS private subnet SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe26d73bd17f44b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0535c54f791156fff"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp-shamo-sg-rds",
            "name_prefix": "",
            "owner_id": "827006371271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp-shamo-sg-rds"
            },
            "tags_all": {
              "Name": "wp-shamo-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be87d32749c2e208"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.ec2_public"
          ]
        }
      ]
    }
  ]
}